# cfd-copilot

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/static/: index.html
cfd_copilot/: __init__.py  agent.py  api.py  cli.py  config.py  generator.py  llm.py  openfoam.py  rag.py  runner.py  schema.py  validator.py
cfd_copilot/templates/: _macros.jinja
cfd_copilot/templates/cavity/0/: U.jinja  p.jinja
cfd_copilot/templates/cavity/constant/: transportProperties.jinja
cfd_copilot/templates/cavity/system/: blockMeshDict.jinja  controlDict.jinja  fvSchemes.jinja  fvSolution.jinja
cfd_copilot/templates/channel/0/: U.jinja  epsilon.jinja  k.jinja  nut.jinja  omega.jinja  p.jinja
cfd_copilot/templates/channel/constant/: transportProperties.jinja  turbulenceProperties.jinja
cfd_copilot/templates/channel/system/: blockMeshDict.jinja  controlDict.jinja  fvSchemes.jinja  fvSolution.jinja
cfd_copilot/templates/forward_step/0/: T.jinja  U.jinja  p.jinja
cfd_copilot/templates/forward_step/constant/: thermophysicalProperties.jinja  turbulenceProperties.jinja
cfd_copilot/templates/forward_step/system/: blockMeshDict.jinja  controlDict.jinja  fvSchemes.jinja  fvSolution.jinja
scripts/: generate_architecture_pdf.py
tests/: test_agent_offline.py  test_generator.py  test_integration_openfoam.py  test_llm_rules.py  test_parsing.py  test_schema.py
